--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="assets/thought-cloud.png">
   <script src="/assets/ace-builds/ace.js"></script>
   <script src="https://accounts.google.com/gsi/client" async></script>
+  <script>
+    function handleGoogleLoginResponse(response){
+      window.loginSubject.next(response); 
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
