--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/thought-cloud.png">
-  <script src="/assets/ace-builds/ace.js"></script>
+  <script src="src/ace-builds/ace.js"></script>
   <script src="https://accounts.google.com/gsi/client" async></script>
   <script>
     function handleGoogleLoginResponse(response){
